# Microservice-Deployment-Monitoring-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  INSTALLATION.md  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml
ai/: README.md  architecture.md  future-modules.md
applications/: Dockerfile.traffic  traffic_generator.py
applications/auth/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
applications/frontend/: Dockerfile  (+3 more)
applications/products/: .dockerignore  .env.example  README.md  pyproject.toml
applications/products/src/: main.py
applications/products/tests/: test_main.py
architecture/: README.md  ai_architecture.md  backend-architecture.drawio  cluster-registry.drawio  database-er.drawio  deployment-architecture.drawio  frontend-architecture.drawio  gitops-control-plane.drawio  gitops_architecture.md  nexus-ai.drawio  observability_architecture.md  rbac.drawio  sequence-ai-investigation.drawio  sequence-gitops-sync.drawio  sequence-login.drawio  system-overview.drawio  system_architecture.md
assets/: README.md
dashboard/: README.md
docker/: README.md  docker-compose.yml
docs/: 01-Prerequisites.md  01-prerequisites.md  02-Installation.md  02-installation.md  03-Architecture.md  03-system-architecture.md  04-CI-CD.md  04-ci-cd-gitops.md  05-Kubernetes.md  05-kubernetes-integration.md  06-Observability.md  06-observability.md  07-AI.md  07-nexus-ai.md  08-Troubleshooting.md  08-troubleshooting.md  09-Roadmap.md  09-roadmap.md  10-FAQ.md  10-faq.md  11-api-reference.md  12-rbac-security.md  13-gitops-cluster-registry.md  14-developer-guide.md  15-administrator-guide.md
examples/: README.md  sample-deployment.yaml
gitops/: README.md
helm/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-qa.yaml  values-stage.yaml  values.yaml
kubernetes/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml  traffic-generator.yaml
platform/: README.md
scripts/: README.md  backup.sh  build_images.sh  cleanup.sh  deploy.sh  deploy_helm.sh  diagnostics.sh  healthcheck.sh  restore.sh  rollback.sh  setup.sh  setup_sprint12.py  upgrade.sh
(+278 files in other folders)
