[tool.poetry]
name = "devops-nexus-platform"
version = "0.2.0"
description = "FastAPI Orchestrator backend for DevOps Nexus"
authors = ["DevOps Nexus Team <support@devopsnexus.io>"]
readme = "platform/backend/README.md"
packages = [
    {include = "app", from = "platform/backend"},
    {include = "shared", from = "platform"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
kubernetes = "^29.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
