[tool.poetry]
name = "devops-nexus-platform"
version = "0.2.0"
description = "FastAPI Orchestrator backend for DevOps Nexus"
authors = ["DevOps Nexus Team <support@devopsnexus.io>"]
readme = "platform/backend/README.md"
packages = [
    {include = "app", from = "platform/backend"},
    {include = "shared", from = "platform"}
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
kubernetes = "^29.0.0"
httpx = "^0.27.0"
redis = "^5.0.3"
openai = "^1.55.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.28"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"
ruff = "^0.3.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Code Quality Tool Configurations ---
[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py313"
lint.select = ["E", "F", "W", "I"]
lint.ignore = []

[tool.pytest.ini_options]
testpaths = ["platform/backend/tests"]
