[tool.poetry]
name = "products-service"
version = "0.1.0"
description = "FastAPI products microservice"
authors = ["Nexus Team <support@devopsnexus.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.4"
prometheus-client = "^0.20.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"